matches (minor): Correct layer-checkboxes layout on small screens

--- a/user-interface/src/main/angular/projects/labbcat-view/src/app/matches/matches.component.css
+++ b/user-interface/src/main/angular/projects/labbcat-view/src/app/matches/matches.component.css
@@ -53,10 +53,6 @@
 .csv-options label {
     white-space: nowrap;
 }
-lib-layer-checkboxes {
-    display: flex;
-    flex-direction: row;
-}
 input[type="checkbox"]:disabled {
     cursor: not-allowed;
 }
